resolved color contrast errors.

--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ ol, ul, li {
 aside {
     border: 4px solid #0C4F29; 
     border-radius: 14px;
-    background-color: #82A71D;
+    background-color: #D3D335;
     width: 25%; 
     margin: 1em; 
     padding: 1em;  
